# png-info-for-comfyui

./: .comfyignore  .gitignore  README.md  __init__.py  png_info_node.py  png_info_parser.py  pyproject.toml  routes.py
.github/workflows/: publish_action.yml
tests/: test_parser.py
web/: png_info.js
