[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "png-info"
version = "0.1.1"
description = "Read A1111 and ComfyUI PNG metadata into reusable ComfyUI settings"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Gerbesh" }]
dependencies = ["Pillow>=10"]
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/Gerbesh/png-info-for-comfyui"
Issues = "https://github.com/Gerbesh/png-info-for-comfyui/issues"

[tool.comfy]
PublisherId = "gerbesh"
DisplayName = "PNG Info for ComfyUI"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
